--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </div>    
             </div>
             <div id="keyboard">
-                <button class="operator" id="clear">C</button>
+                <button class="operator" id="clear">CLR</button>
                 <button id="backspace" class="operator">CE</button>
                 <button class="operator" id="%">%</button>
                 <button class="operator" id="/">&#247</button>
